# daison

./: Example.hs  LICENSE  Makefile  README.md  daison.cabal  helda.cabal  setup.py
.github/workflows/: build-daison.yml
c/: sqlite3Btree.c  sqlite3Btree.h
doc/: tutorial.md
haskell/Database/: Daison.hs
haskell/Database/Daison/: FFI.hsc  Serialize.hs
java/: jdaison.c
java/org/daison/: DataStream.java  Database.java
python/: pydaison.c
src/: sqlite3Btree.c  sqlite3Btree.h
src/Database/: Daison.hs  Helda.hs
src/Database/Daison/: Serialize.hs
src/Database/Helda/: FFI.hsc  Serialize.hs
