name:                helda
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Helda
  other-modules:       Database.Helda.FFI
                       Database.Helda.Serialize
  build-depends:       base >=4.3, binary, syb, bytestring, containers, transformers
  default-language:    Haskell2010
  build-tools:         hsc2hs
  c-sources:           src/sqlite3Btree.c
  include-dirs:        src
  hs-source-dirs:      src
  extra-libraries: pthread
